fix access keys being displayed only for the visible part of the page, fix scrolling while access keys are displayed producing artifacts

BUG: 219306
BUG: 172870

svn path=/trunk/KDE/kdelibs/; revision=1089662